--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caesar Cipher Tool</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer> </script>
 </head>
 <body>
 
@@ -26,8 +27,8 @@
             </div>
             
             <div class="button-wrapper">
-                <button class="btn btn-encrypt">Encrypt</button>
-                <button class="btn btn-decrypt">Decrypt</button>
+                <button class="btn btn-encrypt" onClick="encrypt()">Encrypt</button>
+                <button class="btn btn-decrypt" onClick="decrypt()">Decrypt</button>
             </div>
         </div>
 
